2008-09-06  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/obscure.c: Compare characters to '\0', not NULL.

2008-09-06  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/defines.h: Do not include <config.h>. This complicate
	undefining some configuration macros when the file is included
	multiple times.
	* libmisc/xgetXXbyYY.c, libmisc/xgetpwnam.c, libmisc/xgetpwuid.c,
	libmisc/xgetgrgid.c, libmisc/xgetgrnam.c, libmisc/xgetspnam.c:
	Include <config.h> from teh compiled C file, not the included
	getXXbyYY.c.

2008-09-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/userdel.c, src/newusers.c, src/chpasswd.c, src/chfn.c,
	src/groupmems.c, src/usermod.c, src/groupdel.c, src/chgpasswd.c,
	src/useradd.c, src/groupmod.c, src/groupadd.c, src/chage.c,
	src/chsh.c: Simplify the PAM error handling. Do not keep the pamh
	handle, but terminate the PAM transaction as soon as possible if
	there are no PAM session opened.

2008-09-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c, src/userdel.c, src/grpck.c, src/gpasswd.c,
	src/newusers.c, src/pwconv.c, src/chpasswd.c, src/logoutd.c,
	src/chfn.c, src/groupmems.c, src/usermod.c, src/pwunconv.c,
	src/expiry.c, src/groupdel.c, src/chgpasswd.c, src/useradd.c,
	src/su.c, src/groupmod.c, src/passwd.c, src/pwck.c,
	src/groupadd.c, src/chage.c, src/login.c, src/grpconv.c,
	src/groups.c, src/grpunconv.c, src/chsh.c: Prog is now global (not
	static to the file) so that it can be used by the helper functions
	of libmisc.
	* lib/prototypes.h: Added extern char *Prog.
	* libmisc/find_new_gid.c, libmisc/find_new_uid.c: Indicate the
	program name with the warning.

2008-09-05  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: Check if AUDIT_ADD_USER, AUDIT_DEL_USER,
	AUDIT_ADD_GROUP, and AUDIT_DEL_GROUP are defined in <libaudit.h>.

2008-09-04  Nicolas François  <nicolas.francois@centraliens.net>
