@@ -1,5 +1,11 @@
 2008-09-06  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/groupmems.c: Call open_files() and close_files().
+	* src/groupmems.c: Always call check_perms(), which takes care of
+	checking if --list is used.
+
+2008-09-06  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* libmisc/obscure.c: Compare characters to '\0', not NULL.
 
 2008-09-06  Nicolas François  <nicolas.francois@centraliens.net>
